--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -19,6 +19,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest numpy scipy matplotlib
+    - name: Print current directory
+      run: pwd
+    - name: List files
+      run: ls -R
     - name: Test the code with pytest
       run: |
         pytest
