--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -25,4 +25,5 @@ jobs:
       run: ls -R
     - name: Test the code with pytest
       run: |
+        export PYTHONPATH=$PYTHONPATH:$(pwd)/metas_b_least
         pytest
